--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <head>
-  <title>Kari Naga</title>
+  <title>Kari Naga's Resume</title>
 </head>
 <body>
-  <h1>Kari Naga</h1>
+  <h1>WIP</h1>
 </body>
